# source-2013-custom

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  build-maps.sh  build.sh  s2013c.code-workspace  setup-game.sh
content/: config.ini  maps.json
content/mapsrc/: sdk_3d_skybox.vmf  sdk_background.vmf  sdk_cubemaps.vmf  sdk_d1_town_03.vmf  sdk_d1_trainstation_04.vmf  sdk_d1_trainstation_05.vmf  sdk_d2_coast_12.vmf  sdk_d3_citadel_01.vmf  sdk_faceposer.vmf  sdk_occluders.vmf  sdk_shader_samples.vmf  sdk_vehicles.vmf
doc/: building-with-chroot.md  index.md  mapping-on-linux.md  roadmap.md  setup.md
game/: bin  hl2  hl2.sh  hl2_linux  hl2mp  launch.sh  perf.data  perf.data.old  platform  sdktools  sourcetest  steam_appid.txt
game/hl2/: gameinfo.txt  navplace.db  steam.inf
game/hl2/models/: advisor.mdl  airboat.mdl  airboatgun.mdl  alyx.mdl  alyx_animations.mdl  alyx_emptool_prop.mdl  alyx_gestures.mdl  alyx_postures.mdl  alyxmask.mdl  ambient_citadel_paths.mdl  antlion.mdl  antlion_guard.mdl  barnacle.mdl  barney.mdl  barney_animations.mdl  barney_gestures.mdl  barney_postures.mdl  barneyhelmet.mdl  barneyhelmet_faceplate.mdl  blackout.mdl  breen.mdl  breen_anims.mdl  breen_gestures.mdl  breen_monitor.mdl  breen_postures.mdl  brokenglass_piece.mdl  buggy.mdl  chefhat.mdl  combine_apc.mdl  combine_apc_destroyed_gib01.mdl  combine_apc_destroyed_gib02.mdl  combine_apc_destroyed_gib03.mdl  combine_apc_destroyed_gib04.mdl  combine_apc_destroyed_gib05.mdl  combine_apc_destroyed_gib06.mdl  combine_apc_dynamic.mdl  combine_apc_wheelcollision.mdl  combine_dropship.mdl  combine_dropship_animations.mdl  combine_dropship_container.mdl  (+69 more)
game/hl2mp/: hl2mp_pak.vpk.sound.cache  hl2mp_pak_dir.vpk
game/mod_hl2mp/: gameinfo.txt  glshaders.cfg  map_compile.sh  mat_compile.sh  modelsounds.cache  settings.json  videoconfig_linux.cfg
game/mod_hl2mp/maps/: ShittyApt.bsp
game/mod_hl2mp/mapsrc/: LightingTest.prt  LightingTest.vmx  ShittyApt.prt  ShittyApt.vmf
game/mod_hl2mp/resource/: ClientScheme.res
game/mod_hl2mp/scripts/: LauncherScheme.res  ammotypes.txt
game/platform/: platform_misc_dir.vpk
game/platform/admin/: admin_brazilian.txt  admin_bulgarian.txt  admin_french.txt  admin_german.txt  admin_koreana.txt  admin_portuguese.txt  admin_spanish.txt  admin_tchinese.txt  admin_thai.txt  hlds_logo.tga  server_bulgarian.txt  server_french.txt  server_german.txt  server_norwegian.txt  server_portuguese.txt  server_spanish.txt  server_turkish.txt
game/platform/config/: ingamedialogconfig.vdf  serverbrowser.vdf
game/platform/resource/: icon_blank.tga  icon_file.tga  icon_folder.tga  icon_folder_selected.tga  icon_folderup.tga  icon_password.tga  icon_replay.tga  icon_steam_disabled.tga  valve_logo.tga  vgui_brazilian.txt  vgui_bulgarian.txt  vgui_danish.txt  vgui_dutch.txt  vgui_french.txt  vgui_hungarian.txt  vgui_polish.txt  vgui_russian.txt  vgui_spanish.txt  vgui_swedish.txt  vgui_tchinese.txt
game/platform/servers/: serverbrowser_brazilian.txt  serverbrowser_bulgarian.txt  serverbrowser_czech.txt  serverbrowser_danish.txt  serverbrowser_dutch.txt  serverbrowser_finnish.txt  serverbrowser_french.txt  serverbrowser_german.txt  serverbrowser_hungarian.txt  serverbrowser_koreana.txt  serverbrowser_norwegian.txt  serverbrowser_polish.txt  serverbrowser_portuguese.txt  serverbrowser_romanian.txt  serverbrowser_russian.txt  serverbrowser_schinese.txt  serverbrowser_spanish.txt  serverbrowser_swedish.txt  serverbrowser_tchinese.txt  serverbrowser_thai.txt
scripts/: build-dxvk.sh  config.py  map_build.py
src/: .gitattributes  CMakeLists.txt  build-linux32-chroot.sh  build-run-linux32.sh  configure-linux32.sh  configure.sh  env.sh  relink-linux32.sh  relink-run-linux32.sh  run-docker.sh  run-linux32.sh
src/cmake_scripts/: project-base.cmake  source-base.cmake  source-directories.cmake
src/common/dxvk/: README.md  d3d9.h  d3d9types.h  windows_base.h
src/cscript/: cscript.cpp  cscript.vpc
src/devtools/: makefile_base_posix.mak
src/devtools/python/: map_cfg.py  map_compile.py  settings.py  setup.py  util.py
src/fgdlib/: CMakeLists.txt  gamedata.cpp  gdvar.cpp  wckeyvalues.cpp
src/game/client/: CMakeLists.txt  c_baseplayer.h  cdll_client_int.cpp  cdll_client_int.h  client_hl2mp.vpc  in_main.cpp  log.txt  physics.cpp  view.cpp  viewrender.cpp
src/game/server/: CMakeLists.txt  env_zoom.cpp  gameinterface.cpp  gameinterface.h  physics.cpp  physics_collisionevent.h  physics_record.cpp  physics_record.h  server_hl2mp.vpc  server_linux32_hl2mp.project
src/game/server/hl2/: grenade_frag.cpp
src/game/shared/: GameStats.cpp  baseentity_shared.cpp  in_buttons.h
src/gamedata/: GameConfig.txt  README.md  install.sh  prefix.txt
src/gamedata/entities/: mod.fgd
src/lib/public/: vtf.lib  (+13 more)
src/mathlib/: CMakeLists.txt  random.cpp
src/public/: datamap.h  filesystem_init.cpp  scratchpad3d.cpp
src/raytrace/: CMakeLists.txt
src/tier1/: CMakeLists.txt  interface.cpp  strtools.cpp  tier1_linux32.project
src/togl/: togl.vpc
src/tovk/: sdlproxy.vpc  tovk.vpc
src/utils/studiomdl/: CMakeLists.txt  collisionmodel.cpp  matsys.cpp  matsys.h  simplify.cpp  studiomdl.cpp  studiomdl.h  unifylods.cpp
src/utils/vbsp/: CMakeLists.txt  cubemap.cpp  detailobjects.cpp  disp_ivp.cpp  ivp.cpp  manifest.cpp  map.cpp  staticprop.cpp  vbsp.cpp  vbsp.vpc
src/utils/vrad/: CMakeLists.txt  incremental.cpp  incremental.h  leaf_ambient_lighting.cpp  lightmap.cpp  mpivrad.cpp  radial.cpp  trace.cpp  vismat.cpp  vrad.cpp  vrad.h  vrad_dispcoll.h  vrad_dll.vpc  vraddetailprops.cpp  vraddisps.cpp  vraddll.cpp  vradstaticprops.cpp
src/utils/vrad_launcher/: CMakeLists.txt  stdafx.h  vrad_launcher.cpp  vrad_launcher.vpc
src/utils/vtftool/: CMakeLists.txt  vtftool.cpp  vtftool.vpc
src/utils/vvis/: CMakeLists.txt  flow.cpp  vvis.cpp  vvis_dll.vpc
src/utils/vvis_launcher/: CMakeLists.txt  vvis_launcher.cpp  vvis_launcher.vpc
src/vpc_scripts/: groups.vgc  openvr.vpc  projects.vgc  source_exe_posix_base.vpc  source_posix_base.vpc
src/vr/: vr.vpc  vr_client_main.cpp
(+7627 files in other folders)
