#
#
# Project script for client
#
#
project(client C CXX)

# Platform specific sources 
set(WINDOWS_SRCS		"${ROOT}/public/haptics/haptic_utils.cpp"
						"${ROOT}/public/tier0/memoverride.cpp")

set(POSIX_SRCS	)
set(SRCS
	"${ROOT}/game/client/hl2/C_Func_Monitor.cpp"
	"geiger.cpp"
	"history_resource.cpp"
	"hud_weapon.cpp"
	"train.cpp"
	#"${ROOT}/game/shared/weapon_parse_default.cpp"
	"${ROOT}/game/shared/achievement_saverestore.cpp"
	"${ROOT}/game/shared/achievement_saverestore.h"
	"${ROOT}/game/shared/achievementmgr.cpp"
	"${ROOT}/game/shared/achievementmgr.h"
	"${ROOT}/game/shared/achievements_and_stats_interface.h"
	"${ROOT}/game/shared/achievements_hlx.cpp"
	"achievement_notification_panel.cpp"
	"achievement_notification_panel.h"
	"${ROOT}/game/shared/activitylist.cpp"
	"alphamaterialproxy.cpp"
	"${ROOT}/game/shared/ammodef.cpp"
	"animatedentitytextureproxy.cpp"
	"animatedoffsettextureproxy.cpp"
	"animatedtextureproxy.cpp"
	"AnimateSpecificTextureProxy.cpp"
	"${ROOT}/game/shared/animation.cpp"
	"${ROOT}/game/shared/base_playeranimstate.cpp"
	"${ROOT}/game/shared/baseachievement.cpp"
	"${ROOT}/game/shared/baseachievement.h"
	"baseanimatedtextureproxy.cpp"
	"baseclientrendertargets.cpp"
	"${ROOT}/game/shared/basecombatcharacter_shared.cpp"
	"${ROOT}/game/shared/basecombatweapon_shared.cpp"
	"${ROOT}/game/shared/baseentity_shared.cpp"
	"${ROOT}/game/shared/basegrenade_shared.cpp"
	"${ROOT}/game/shared/baseparticleentity.cpp"
	"${ROOT}/game/shared/baseplayer_shared.cpp"
	"${ROOT}/game/shared/baseprojectile.cpp"
	"${ROOT}/game/shared/baseprojectile.h"
	"${ROOT}/game/shared/baseviewmodel_shared.cpp"
	"beamdraw.cpp"
	"${ROOT}/game/shared/beam_shared.cpp"
	"${ROOT}/public/bone_accessor.cpp"
	"bone_merge_cache.cpp"
	"c_ai_basehumanoid.cpp"
	"c_ai_basenpc.cpp"
	"c_baseanimating.cpp"
	"c_baseanimatingoverlay.cpp"
	"c_basecombatcharacter.cpp"
	"c_basecombatweapon.cpp"
	"c_basedoor.cpp"
	"c_baseentity.cpp"
	"c_baseflex.cpp"
	"c_baseplayer.cpp"
	"c_baseviewmodel.cpp"
	"c_breakableprop.cpp"
	"c_colorcorrection.cpp"
	"c_colorcorrectionvolume.cpp"
	"c_dynamiclight.cpp"
	"c_entitydissolve.cpp"
	"c_entityparticletrail.cpp"
	"c_env_fog_controller.cpp"
	"c_env_particlescript.cpp"
	"c_env_projectedtexture.cpp"
	"c_env_screenoverlay.cpp"
	"c_env_tonemap_controller.cpp"
	"c_fire_smoke.cpp"
	"c_fish.cpp"
	"c_func_areaportalwindow.cpp"
	"c_func_breakablesurf.cpp"
	"c_func_conveyor.cpp"
	"c_func_dust.cpp"
	"c_func_lod.cpp"
	"c_func_occluder.cpp"
	"c_func_reflective_glass.cpp"
	"c_func_rotating.cpp"
	"c_func_smokevolume.cpp"
	"c_func_tracktrain.cpp"
	"c_gib.cpp"
	"c_hairball.cpp"
	"c_info_overlay_accessor.cpp"
	"c_lightglow.cpp"
	"C_MaterialModifyControl.cpp"
	"c_particle_system.cpp"
	"c_physbox.cpp"
	"c_physicsprop.cpp"
	"c_physmagnet.cpp"
	"c_pixel_visibility.cpp"
	"c_plasma.cpp"
	"c_playerresource.cpp"
	"c_point_camera.cpp"
	"c_point_commentary_node.cpp"
	"c_props.cpp"
	"c_props.h"
	"c_ragdoll_manager.cpp"
	"c_rope.cpp"
	"c_rumble.cpp"
	"c_sceneentity.cpp"
	"c_shadowcontrol.cpp"
	"c_slideshow_display.cpp"
	"c_slideshow_display.h"
	"c_soundscape.cpp"
	"c_spotlight_end.cpp"
	"c_sprite.cpp"
	"c_sprite_perfmonitor.cpp"
	"c_sun.cpp"
	"c_team.cpp"
	"c_tesla.cpp"
	"c_test_proxytoggle.cpp"
	"c_user_message_register.cpp"
	"c_vehicle_choreo_generic.cpp"
	"c_vehicle_jeep.cpp"
	"c_vguiscreen.cpp"
	"${ROOT}/game/client/hl2/c_waterbullet.cpp"
	"${ROOT}/game/client/hl2/hud_autoaim.cpp"
	"C_WaterLODControl.cpp"
	"c_world.cpp"
	"${ROOT}/game/shared/cam_thirdperson.cpp"
	"${ROOT}/game/shared/cam_thirdperson.h"
	"camomaterialproxy.cpp"
	"cdll_client_int.cpp"
	"cdll_bounded_cvars.cpp"
	"cdll_bounded_cvars.h"
	"cdll_util.cpp"
	"cl_mat_stub.cpp"
	"classmap.cpp"
	"client_factorylist.cpp"
	"client_thinklist.cpp"
	"client_virtualreality.cpp"
	"client_virtualreality.h"
	"clienteffectprecachesystem.cpp"
	"cliententitylist.cpp"
	"clientleafsystem.cpp"
	"clientmode_shared.cpp"
	"clientshadowmgr.cpp"
	"clientsideeffects.cpp"
	"clientsideeffects_test.cpp"
	"clientsteamcontext.cpp"
	"clientsteamcontext.h"
	"colorcorrectionmgr.cpp"
	"commentary_modelviewer.cpp"
	"commentary_modelviewer.h"
	"${ROOT}/game/shared/collisionproperty.cpp"
	"${ROOT}/game/shared/death_pose.cpp"
	"${ROOT}/game/shared/debugoverlay_shared.cpp"
	"${ROOT}/game/shared/decals.cpp"
	"detailobjectsystem.cpp"
	"dummyproxy.cpp"
	"${ROOT}/game/shared/effect_dispatch_data.cpp"
	"EffectsClient.cpp"
	"${ROOT}/game/shared/ehandle.cpp"
	"${ROOT}/game/shared/entitylist_base.cpp"
	"entityoriginmaterialproxy.cpp"
	"${ROOT}/game/shared/EntityParticleTrail_Shared.cpp"
	"${ROOT}/game/shared/env_detail_controller.cpp"
	"${ROOT}/game/shared/env_wind_shared.cpp"
	"${ROOT}/game/shared/eventlist.cpp"
	"flashlighteffect.cpp"
	"${ROOT}/game/shared/func_ladder.cpp"
	"functionproxy.cpp"
	"fx_blood.cpp"
	"fx_cube.cpp"
	"fx_explosion.cpp"
	"fx_fleck.cpp"
	"fx_impact.cpp"
	"fx_interpvalue.cpp"
	"fx_quad.cpp"
	"fx_shelleject.cpp"
	"fx_staticline.cpp"
	"fx_tracer.cpp"
	"fx_trail.cpp"
	"fx_water.cpp"
	"${ROOT}/game/shared/gamemovement.cpp"
	"${ROOT}/game/shared/gamerules.cpp"
	"${ROOT}/game/shared/gamerules_register.cpp"
	"${ROOT}/game/shared/GameStats.cpp"
	"${ROOT}/game/shared/gamestringpool.cpp"
	"gametrace_client.cpp"
	"${ROOT}/game/shared/gamevars_shared.cpp"
	"glow_outline_effect.cpp"
	"glow_overlay.cpp"
	"${ROOT}/game/shared/hintmessage.cpp"
	"${ROOT}/game/shared/hintsystem.cpp"
	"hltvcamera.cpp"
	"hud.cpp"
	"hud_animationinfo.cpp"
	"hud_basechat.cpp"
	"hud_basetimer.cpp"
	"hud_bitmapnumericdisplay.cpp"
	"hud_closecaption.cpp"
	"hud_crosshair.cpp"
	"hud_element_helper.cpp"
	"${ROOT}/game/client/hl2/hud_filmdemo.cpp"
	"${ROOT}/game/client/hl2/hud_hdrdemo.cpp"
	"hud_hintdisplay.cpp"
	"hud_msg.cpp"
	"hud_numericdisplay.cpp"
	"hud_pdump.cpp"
	"hud_redraw.cpp"
	"hud_vehicle.cpp"
	"${ROOT}/game/shared/igamesystem.cpp"
	"in_camera.cpp"
	"in_joystick.cpp"
	"in_main.cpp"
	"initializer.cpp"
	"interpolatedvar.cpp"
	"IsNPCProxy.cpp"
	"lampbeamproxy.cpp"
	"lamphaloproxy.cpp"
	"${ROOT}/game/shared/mapentities_shared.cpp"
	"mathproxy.cpp"
	"matrixproxy.cpp"
	"menu.cpp"
	"message.cpp"
	"movehelper_client.cpp"
	"${ROOT}/game/shared/movevars_shared.cpp"
	"${ROOT}/game/shared/multiplay_gamerules.cpp"
	"${ROOT}/game/shared/obstacle_pushaway.cpp"
	"panelmetaclassmgr.cpp"
	"particle_collision.cpp"
	"particle_litsmokeemitter.cpp"
	"${ROOT}/game/shared/particle_parse.cpp"
	"${ROOT}/game/shared/particle_parse.h"
	"${ROOT}/game/shared/particle_property.cpp"
	"${ROOT}/game/shared/particle_property.h"
	"particle_proxies.cpp"
	"particle_simple3d.cpp"
	"particlemgr.cpp"
	"particles_attractor.cpp"
	"particles_ez.cpp"
	"particles_localspace.cpp"
	"particles_new.cpp"
	"particles_simple.cpp"
	"${ROOT}/game/shared/particlesystemquery.cpp"
	"perfvisualbenchmark.cpp"
	"physics.cpp"
	"physics_main_client.cpp"
	"${ROOT}/game/shared/physics_main_shared.cpp"
	"${ROOT}/game/shared/physics_saverestore.cpp"
	"${ROOT}/game/shared/physics_shared.cpp"
	"physpropclientside.cpp"
	"playerandobjectenumerator.cpp"
	"playerspawncache.cpp"
	"${ROOT}/game/shared/point_bonusmaps_accessor.cpp"
	"${ROOT}/game/shared/point_bonusmaps_accessor.h"
	"${ROOT}/game/shared/point_posecontroller.cpp"
	"${ROOT}/game/shared/precache_register.cpp"
	"${ROOT}/game/shared/predictableid.cpp"
	"prediction.cpp"
	"${ROOT}/game/shared/predictioncopy.cpp"
	"${ROOT}/game/shared/props_shared.cpp"
	"proxyentity.cpp"
	"ProxyHealth.cpp"
	"proxyplayer.cpp"
	"proxypupil.cpp"
	"ragdoll.cpp"
	"${ROOT}/game/shared/ragdoll_shared.cpp"
	"recvproxy.cpp"
	"basepresence.cpp"
	"${ROOT}/game/shared/rope_helpers.cpp"
	"${ROOT}/game/shared/saverestore.cpp"
	"${ROOT}/game/shared/sceneentity_shared.cpp"
	"ScreenSpaceEffects.cpp"
	"${ROOT}/game/shared/sequence_Transitioner.cpp"
	"simple_keys.cpp"
	"${ROOT}/game/shared/simtimer.cpp"
	"${ROOT}/game/shared/singleplay_gamerules.cpp"
	"${ROOT}/game/shared/SoundEmitterSystem.cpp"
	"${ROOT}/game/shared/soundenvelope.cpp"
	"${ROOT}/public/SoundParametersInternal.cpp"
	"splinepatch.cpp"
	"${ROOT}/game/shared/Sprite.cpp"
	"spritemodel.cpp"
	"${ROOT}/game/shared/SpriteTrail.cpp"
	"${ROOT}/game/shared/studio_shared.cpp"
	"studio_stats.cpp"
	"studio_stats.h"
	"${ROOT}/game/shared/takedamageinfo.cpp"
	"${ROOT}/game/shared/teamplay_gamerules.cpp"
	"${ROOT}/game/shared/teamplayroundbased_gamerules.cpp"
	"${ROOT}/game/shared/test_ehandle.cpp"
	"text_message.cpp"
	"texturescrollmaterialproxy.cpp"
	"timematerialproxy.cpp"
	"toggletextureproxy.cpp"
	"${ROOT}/game/shared/usercmd.cpp"
	"${ROOT}/game/shared/usermessages.cpp"
	"${ROOT}/game/shared/util_shared.cpp"
	"${ROOT}/game/shared/vehicle_viewblend_shared.cpp"
	"vgui_avatarimage.cpp"
	"vgui_avatarimage.h"
	"vgui_basepanel.cpp"
	"vgui_bitmapbutton.cpp"
	"vgui_bitmapimage.cpp"
	"vgui_bitmappanel.cpp"
	"vgui_schemevisualizer.cpp"
	"vgui_centerstringpanel.cpp"
	"vgui_consolepanel.cpp"
	"vgui_debugoverlaypanel.cpp"
	"vgui_fpspanel.cpp"
	"vgui_game_viewport.cpp"
	"vgui_grid.cpp"
	"vgui_int.cpp"
	"vgui_loadingdiscpanel.cpp"
	"vgui_messagechars.cpp"
	"vgui_netgraphpanel.cpp"
	"vgui_slideshow_display_screen.cpp"
	"view.cpp"
	"view_beams.cpp"
	"view_effects.cpp"
	"view_scene.cpp"
	"viewangleanim.cpp"
	"ViewConeImage.cpp"
	"viewdebug.cpp"
	"viewdebug.h"
	"viewpostprocess.cpp"
	"viewpostprocess.h"
	"viewrender.cpp"
	"${ROOT}/game/shared/voice_banmgr.cpp"
	"${ROOT}/game/shared/voice_status.cpp"
	"warp_overlay.cpp"
	"WaterLODMaterialProxy.cpp"
	"${ROOT}/game/shared/weapon_parse.cpp"
	"weapon_selection.cpp"
	"weapons_resource.cpp"
	"WorldDimsProxy.cpp"
	"vgui_video.cpp"
   "vgui_video_player.cpp"
	"${ROOT}/game/shared/mp_shareddefs.cpp"
	"${ROOT}/game/client/c_vote_controller.h"
	"${ROOT}/game/client/c_vote_controller.cpp"
	"${ROOT}/public/haptics/haptic_msgs.cpp"
		"sixense/in_sixense.cpp"
		"sixense/in_sixense.h"
		"sixense/in_sixense_gesture_bindings.cpp"
		"sixense/in_sixense_gesture_bindings.h"
		"${ROOT}/game/shared/sixense/sixense_convars.cpp"
		"${ROOT}/game/shared/sixense/sixense_convars_extern.h"
	"${ROOT}/public/bone_setup.cpp"						
		"${ROOT}/public/posedebugger.cpp"					
		"${ROOT}/public/client_class.cpp"					
		"${ROOT}/common/compiledcaptionswap.cpp"			
		"${ROOT}/public/collisionutils.cpp"					
		"${ROOT}/public/crtmemdebug.cpp"					
		"${ROOT}/public/dt_recv.cpp"						
		"${ROOT}/public/dt_utlvector_common.cpp"			
		"${ROOT}/public/dt_utlvector_recv.cpp"				
		"${ROOT}/public/filesystem_helpers.cpp"				
		"${ROOT}/public/interpolatortypes.cpp"				
		"${ROOT}/game/shared/interval.cpp"					
		"${ROOT}/common/language.cpp"						
		"${ROOT}/public/networkvar.cpp"						
		"${ROOT}/common/randoverride.cpp"					
		"${ROOT}/public/rope_physics.cpp"					
		"${ROOT}/public/scratchpad3d.cpp"					
		"${ROOT}/public/ScratchPadUtils.cpp"				
		"${ROOT}/public/sentence.cpp"						
		"${ROOT}/game/shared/sheetsimulator.cpp"			
		"${ROOT}/public/simple_physics.cpp"					
		"${ROOT}/public/stringregistry.cpp"					
		"${ROOT}/public/studio.cpp"							
		"${ROOT}/public/vallocator.cpp"						
		"${ROOT}/public/vgui_controls/vgui_controls.cpp"	
		"${ROOT}/public/jigglebones.cpp"					
		"hud_lcd.cpp"										
		"in_mouse.cpp"										
		"mumble.cpp"					
		"${ROOT}/public/renamed_recvtable_compat.cpp"	
		"rendertexture.cpp"									
	 "stdafx.cpp"
		"c_basetempentity.cpp"
		"c_effects.cpp"
		"c_impact_effects.cpp"
		"c_movie_explosion.cpp"
		"c_particle_fire.cpp"
		"c_particle_smokegrenade.cpp"
		"c_prop_vehicle.cpp"
		"c_recipientfilter.cpp"
		"c_smoke_trail.cpp"
		"c_smokestack.cpp"
		"c_steamjet.cpp"
		"c_stickybolt.cpp"
		"c_te.cpp"
		"c_te_armorricochet.cpp"
		"c_te_basebeam.cpp"
		"c_te_beamentpoint.cpp"
		"c_te_beaments.cpp"
		"c_te_beamfollow.cpp"
		"c_te_beamlaser.cpp"
		"c_te_beampoints.cpp"
		"c_te_beamring.cpp"
		"c_te_beamringpoint.cpp"
		"c_te_beamspline.cpp"
		"c_te_bloodsprite.cpp"
		"c_te_bloodstream.cpp"
		"c_te_breakmodel.cpp"
		"c_te_bspdecal.cpp"
		"c_te_bubbles.cpp"
		"c_te_bubbletrail.cpp"
		"c_te_clientprojectile.cpp"
		"c_te_decal.cpp"
		"c_te_dynamiclight.cpp"
		"c_te_effect_dispatch.cpp"
		"c_te_energysplash.cpp"
		"c_te_explosion.cpp"
		"c_te_fizz.cpp"
		"c_te_footprint.cpp"
		"c_te_glassshatter.cpp"
		"c_te_glowsprite.cpp"
		"c_te_impact.cpp"
		"c_te_killplayerattachments.cpp"
		"c_te_largefunnel.cpp"
		"c_te_legacytempents.cpp"
		"c_te_muzzleflash.cpp"
		"c_te_particlesystem.cpp"
		"c_te_physicsprop.cpp"
		"c_te_playerdecal.cpp"
		"c_te_projecteddecal.cpp"
		"c_te_showline.cpp"
		"c_te_smoke.cpp"
		"c_te_sparks.cpp"
		"c_te_sprite.cpp"
		"c_te_spritespray.cpp"
		"c_te_worlddecal.cpp"
		"c_testtraceline.cpp"
		"c_tracer.cpp"
		"fx.cpp"
		"fx_discreetline.cpp"
		"fx_envelope.cpp"
		"fx_line.cpp"
		"fx_sparks.cpp"
		"particlesphererenderer.cpp"
		"smoke_fog_overlay.cpp"
		"c_team_objectiveresource.cpp"
		"c_team_objectiveresource.h"
		"c_team_train_watcher.cpp"
		"c_team_train_watcher.h"
		"hud_voicestatus.cpp"
		"${ROOT}/game/shared/predicted_viewmodel.cpp"
		"${ROOT}/game/shared/predicted_viewmodel.h"
		"${ROOT}/game/shared/teamplay_round_timer.cpp"
		"${ROOT}/game/shared/teamplay_round_timer.h"
 		"${ROOT}/game/client/episodic/c_vort_charge_token.cpp"
		"${ROOT}/game/shared/hl2/basehlcombatweapon_shared.cpp"
		"${ROOT}/game/client/hl2/c_antlion_dust.cpp"
		"${ROOT}/game/client/hl2/c_ar2_explosion.cpp"
		"${ROOT}/game/client/hl2/c_barnacle.cpp"
		"${ROOT}/game/client/hl2/c_barney.cpp"
		"${ROOT}/game/client/hl2/c_basehelicopter.cpp"
		"${ROOT}/game/client/hl2/c_basehelicopter.h"
		"${ROOT}/game/client/hl2/c_basehlcombatweapon.cpp"
		"${ROOT}/game/client/hl2/c_basehlcombatweapon.h"
		"${ROOT}/game/client/hl2/c_basehlplayer.cpp"
		"${ROOT}/game/client/hl2/c_basehlplayer.h"
		"${ROOT}/game/client/hl2/c_citadel_effects.cpp"
		"${ROOT}/game/client/hl2/c_corpse.cpp"
		"${ROOT}/game/client/hl2/c_corpse.h"
		"${ROOT}/game/client/hl2/c_env_alyxtemp.cpp"
		"${ROOT}/game/client/hl2/c_env_headcrabcanister.cpp"
		"${ROOT}/game/client/hl2/c_env_starfield.cpp"
		"${ROOT}/game/client/hl2/c_func_tankmortar.cpp"
		"${ROOT}/game/client/hl2/c_hl2_playerlocaldata.cpp"
		"${ROOT}/game/client/hl2/c_hl2_playerlocaldata.h"
		"${ROOT}/game/client/hl2/c_info_teleporter_countdown.cpp"
		"${ROOT}/game/client/hl2/c_npc_antlionguard.cpp"
		"${ROOT}/game/client/hl2/c_npc_combinegunship.cpp"
		"${ROOT}/game/client/hl2/c_npc_manhack.cpp"
		"${ROOT}/game/client/hl2/c_npc_rollermine.cpp"
		"${ROOT}/game/client/hl2/c_plasma_beam_node.cpp"
		"${ROOT}/game/client/hl2/c_prop_combine_ball.cpp"
		"${ROOT}/game/client/hl2/c_prop_combine_ball.h"
		"${ROOT}/game/client/hl2/c_rotorwash.cpp"
		"${ROOT}/game/client/hl2/c_script_intro.cpp"
		"${ROOT}/game/shared/script_intro_shared.cpp"
		"${ROOT}/game/client/hl2/c_strider.cpp"
		"${ROOT}/game/client/hl2/c_te_concussiveexplosion.cpp"
		"${ROOT}/game/client/hl2/c_te_flare.cpp"
		"${ROOT}/game/client/hl2/c_thumper_dust.cpp"
		"${ROOT}/game/client/hl2/c_vehicle_airboat.cpp"
		"${ROOT}/game/client/hl2/c_vehicle_cannon.cpp"
		"${ROOT}/game/client/hl2/c_vehicle_crane.cpp"
		"${ROOT}/game/client/hl2/c_vehicle_crane.h"
		"${ROOT}/game/client/hl2/c_vehicle_prisoner_pod.cpp"
		"${ROOT}/game/client/hl2/c_weapon__stubs_hl2.cpp"
		"${ROOT}/game/client/hl2/c_weapon_crossbow.cpp"
		"${ROOT}/game/shared/hl2/env_headcrabcanister_shared.cpp"
		"${ROOT}/game/shared/hl2/env_headcrabcanister_shared.h"
		"${ROOT}/game/client/hl2/fx_antlion.cpp"
		"${ROOT}/game/client/hl2/fx_bugbait.cpp"
		"${ROOT}/game/client/hl2/fx_hl2_impacts.cpp"
		"${ROOT}/game/client/hl2/fx_hl2_tracers.cpp"
		"${ROOT}/game/client/hl2/hl2_clientmode.cpp"
		"${ROOT}/game/shared/hl2/hl2_gamerules.cpp"
		"${ROOT}/game/shared/hl2/hl2_shareddefs.h"
		"${ROOT}/game/shared/hl2/hl2_usermessages.cpp"
		"${ROOT}/game/shared/hl2/hl_gamemovement.cpp"
		"${ROOT}/game/client/hl2/hl_in_main.cpp"
				"${ROOT}/game/client/hl2/hl_prediction.cpp"
				"${ROOT}/game/client/hl2/hud_ammo.cpp"
				"${ROOT}/game/client/hl2/hud_battery.cpp"
				"${ROOT}/game/client/hl2/hud_blood.cpp"
				"${ROOT}/game/client/hl2/hud_credits.cpp"
				"${ROOT}/game/client/hl2/hud_damageindicator.cpp"
				"${ROOT}/game/client/hl2/hud_flashlight.cpp"
				"${ROOT}/game/client/hl2/hud_health.cpp"
				"${ROOT}/game/client/hl2/hud_poisondamageindicator.cpp"
				"${ROOT}/game/client/hl2/hud_quickinfo.cpp"
				"hud_squadstatus.cpp"
				"${ROOT}/game/client/hl2/hud_suitpower.cpp"
				"${ROOT}/game/client/hl2/hud_suitpower.h"
				"${ROOT}/game/client/hl2/hud_weaponselection.cpp"
				"${ROOT}/game/client/hl2/hud_zoom.cpp"
				"${ROOT}/game/client/hl2/shieldproxy.cpp"
				"${ROOT}/game/client/hl2/vgui_rootpanel_hl2.cpp"
				"${ROOT}/game/client/hl2mp/c_hl2mp_player.cpp"
				"${ROOT}/game/client/hl2mp/c_hl2mp_player.h"
				"${ROOT}/game/client/hl2mp/c_te_hl2mp_shotgun_shot.cpp"
				"${ROOT}/game/client/hl2mp/clientmode_hl2mpnormal.cpp"
				"${ROOT}/game/client/hl2mp/clientmode_hl2mpnormal.h"
				"${ROOT}/game/shared//hl2mp/hl2mp_gamerules.cpp"
				"${ROOT}/game/shared/hl2mp/hl2mp_player_shared.cpp"
				"${ROOT}/game/shared/hl2mp/hl2mp_player_shared.h"
				"${ROOT}/game/shared/hl2mp/hl2mp_weapon_parse.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_357.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_ar2.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_ar2.h"
					"${ROOT}/game/shared/hl2mp/weapon_crossbow.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_crowbar.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_frag.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbase.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbase.h"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbase_machinegun.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbase_machinegun.h"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.h"
					"${ROOT}/game/shared/hl2mp/weapon_physcannon.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_pistol.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_rpg.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_rpg.h"
					"${ROOT}/game/shared/hl2mp/weapon_shotgun.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_slam.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_slam.h"
					"${ROOT}/game/shared/hl2mp/weapon_smg1.cpp"
					"${ROOT}/game/shared/hl2mp/weapon_stunstick.cpp"

					"${ROOT}/game/client/hl2mp/ui/backgroundpanel.cpp"
					"${ROOT}/game/client/hl2mp/ui/backgroundpanel.h"
					"${ROOT}/game/client/hl2mp/hl2mp_hud_chat.cpp"
					"${ROOT}/game/client/hl2mp/hl2mp_hud_chat.h"
					"${ROOT}/game/client/hl2mp/hl2mp_hud_target_id.cpp"
					"${ROOT}/game/client/hl2mp/hl2mp_hud_team.cpp"
					"${ROOT}/game/client/hl2mp/ui/hl2mpclientscoreboard.cpp"
					"${ROOT}/game/client/hl2mp/ui/hl2mpclientscoreboard.h"
					"${ROOT}/game/client/hl2mp/ui/hl2mptextwindow.cpp"
					"${ROOT}/game/client/hl2mp/ui/hl2mptextwindow.h"
					"${ROOT}/game/client/hl2mp/hud_deathnotice.cpp"
					"mp3player.cpp"
					"mp3player.h"
				"${ROOT}/public/tools/bonelist.cpp"
				"${ROOT}/public/tools/bonelist.h"
				"entity_client_tools.cpp"
				"toolframework_client.cpp"
				"toolframework_client.h"
	game_controls/basemodelpanel.cpp 
    game_controls/basemodel_panel.cpp 
    game_controls/baseviewport.cpp 
    game_controls/ClientScoreBoardDialog.cpp
    game_controls/commandmenu.cpp 
    game_controls/IconPanel.cpp 
    game_controls/intromenu.cpp 
    game_controls/MapOverview.cpp 
    game_controls/NavProgress.cpp 
    game_controls/SpectatorGUI.cpp
    game_controls/teammenu.cpp 
    game_controls/vguitextwindow.cpp
		${ROOT}/game/shared/tests/code_panel_test.cpp
    #${ROOT}/public/tier0/memoverride.cpp
)

# Preprocessor defs
set(DEFINES -DNO_STRING_T -DCLIENT_DLL -DVECTOR -DVERSION_SAFE_STEAM_API_INTERFACES -Dstrncpy=use_Q_strncpy_instead
	-D_snprintf=use_Q_snprintf_instead -DHL2_CLIENT_DLL -DHL2MP
	-DVPCGAMECAPS=HL2MP -DPROJECTDIR=${CMAKE_CURRENT_SOURCE_DIR}
)

# Platform-specific preprocessor defines
set(WIN32_DEFINES	)	
set(POSIX32_DEFINES	)
set(WIN64_DEFINES	)
set(POSIX64_DEFINES	)
set(WINDOWS_DEFINES	)
set(POSIX_DEFINES	)

set(PLATFORM_64BIT_DEFINES	)
set(PLATFORM_32BIT_DEFINES 	)

# Links dirs to search for link libs in
set(LINK_DIRS 			)
set(WINDOWS_LINK_DIRS	)
set(POSIX_LINK_DIRS		${PUBLIC_LIB}/linux32/ ${COMMON_LIB}/linux32/)
set(WIN32_LINK_DIRS		)
set(WIN64_LINK_DIRS		)
set(POSIX32_LINK_DIRS	)
set(POSIX64_LINK_DIRS	)

# Generic libs to link against
#set(LINK_LIBS)

# Generic include dirs
set(INCLUDE_DIRS		${PUBLIC_INCLUDE}/tier1 ${PUBLIC_INCLUDE}/tier0 ${ROOT}/game/shared/hl2 ${ROOT}/game/client/hl2/elements ${ROOT}/game/client/hl2
	${ROOT}/game/shared/hl2mp ${ROOT}/game/client/hl2mp ${ROOT}/game/client/hl2mp/ui ${PUBLIC_INCLUDE} ${ROOT}/game/shared/ ${ROOT}/game/client ${ROOT}/game/client/game_controls)

# This is a well-defined order of linking, changing this at all will result in link errors

# Platform specific includes
set(WIN32_INCLUDE_DIRS	)
set(WIN64_INCLUDE_DIRS	)
set(POSIX32_INCLUDE_DIRS	)
set(POSIX64_INCLUDE_DIRS	)

# Set the variable of target for stuff
set(TARGET client )

# Set the output file name
set(OUTPUT_FILE_NAME client )

# If this is a shared lib
set(SHARED_LIB 1)

# If this is a static lib
set(STATIC_LIB 0)

set( PRECOMPILED_HEADERS "cbase.h" )

# Include this to handle all the defines
include(${CMAKESCRIPTS_DIR}/library-base.cmake)

# Other static libs we need 
set(WINDOWS_LINK_LIBS tier3.lib tier2.lib choreoobjects.lib dmxloader.lib matsys_controls.lib particles.lib 
	vtf.lib bitmap.lib vgui_controls.lib)

set(POSIX_LINK_LIBS
	${ROOT}/lib/public/linux32/libprotobuf.a
	${ROOT}/lib/public/linux32/bitmap.a 
	${ROOT}/lib/public/linux32/choreoobjects.a
	${ROOT}/lib/public/linux32/matsys_controls.a 
	${ROOT}/lib/public/linux32/particles.a 
	${ROOT}/lib/public/linux32/dmxloader.a
	${ROOT}/lib/public/linux32/tier2.a 
	${ROOT}/lib/public/linux32/tier3.a 
	${ROOT}/lib/public/linux32/vtf.a 
	${ROOT}/lib/common/linux32/libcrypto.a
	${ROOT}/lib/public/linux32/libz.a
	${ROOT}/lib/common/linux32/libcurl.a
	${ROOT}/lib/common/linux32/libcurlssl.a
	${ROOT}/lib/common/linux32/libssl.a
	mathlib
	tier1
	vgui_controls
	tier0
	vstdlib
	steam_api
	m
	c
	dl
	rt
	pthread)

if(DEFINED WINDOWS)
	target_link_libraries(client ${WINDOWS_LINK_LIBS})
endif(DEFINED WINDOWS)

if(DEFINED POSIX)
	target_link_libraries(client ${POSIX_LINK_LIBS})
endif(DEFINED POSIX)

install(TARGETS client
		RUNTIME DESTINATION ${MOD_DIR}/bin
		LIBRARY DESTINATION ${MOD_DIR}/bin)
